# ibkr-trading-app

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pre-plan.md  summary-checkpoint.md
.claude/: settings.json
.claude/hooks/: doc-reminder.sh
.claude/plans/: ai-integration.md  auto-analysis.md  notifications.md  order-flow-insights.md  order-impact.md  replay-indicators.md  replay.md  setup-suggestions.md  small-caps.md  state-persistence.md  trading-styles.md  vwap.md
.claude/rules/: architecture.md  build.md  cpp-style.md  ibkr-api.md  task-history.md  testing.md  vulkan-imgui.md
.github/workflows/: build.yml
src/: main.cpp
src/bid_stubs/: bid_stubs.c
src/core/models/: MarketData.h  NewsData.h  OrderData.h  PortfolioData.h  ReplayData.h  ScannerData.h  SmartRouting.h  WatchlistData.h  WindowGroup.h
src/core/services/: ChartAnalysis.h  IBKRClient.cpp  IBKRClient.h  IBKRUtils.h  NotificationService.cpp  NotificationService.h  ReplayEngine.h  TradingStyle.h  state-io.h
src/ui/: ChartRender.h  DatePicker.h  NotificationOverlay.cpp  NotificationOverlay.h  SymbolSearch.h  UiScale.h  WshData.h
src/ui/windows/: ChartWindow.cpp  ChartWindow.h  NewsWindow.cpp  NewsWindow.h  NotificationsWindow.cpp  NotificationsWindow.h  OrdersWindow.cpp  OrdersWindow.h  PortfolioWindow.cpp  PortfolioWindow.h  ReplayWindow.cpp  ReplayWindow.h  ScannerWindow.cpp  ScannerWindow.h  TradingWindow.cpp  TradingWindow.h  WatchlistWindow.cpp  WatchlistWindow.h  WshCalendarWindow.cpp  WshCalendarWindow.h
tests/: CMakeLists.txt  test_chart_analysis.cpp  test_ibkr_queue.cpp  test_ibkr_utils.cpp  test_market_data.cpp  test_models.cpp  test_notification_service.cpp  test_replay.cpp  test_state_io.cpp
tools/: CMakeLists.txt  README.md  gen_tones.cpp  gen_voice.sh  voice_phrases.txt
twsapi_macunix.1037.02/IBJts/source/cppclient/client/protobufUnix/: Contract.pb.cc  Contract.pb.h  Order.pb.cc  Order.pb.h  PlaceOrderRequest.pb.cc  PlaceOrderRequest.pb.h
